Fix styling of Lincoln commercial on mobile

--- a/blog/_assets/stylesheets/post.scss
+++ b/blog/_assets/stylesheets/post.scss
@@ -289,3 +289,18 @@ article {
     font-size: smaller;
   }
 }
+
+.video-wrapper {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+  height: 0;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
